MOTO:charger ic upm6920 otg , rollback some usb file
Change-Id: I9628c2670890a108dd32830820e239fd3df3502a

--- a/arch/arm64/boot/dts/sprd/battery/ums9620-2h10-overlay.dtsi
+++ b/arch/arm64/boot/dts/sprd/battery/ums9620-2h10-overlay.dtsi
@@ -151,6 +151,12 @@
 	use-typec-extcon;
 };
 
+&power_controller {
+	vddvbus:otg-vbus {
+		regulator-name = "vddvbus";
+	};
+};
+
 &i2c2 {
 	#address-cells = <1>;
 	#size-cells = <0>;
@@ -162,9 +168,6 @@
 		monitored-battery = <&bat>;
 		irq-gpio = <&ap_gpio 185 GPIO_ACTIVE_LOW>;
 		use-typec-extcon;
-		vddvbus:otg-vbus {
-			regulator-name = "vddvbus";
-		};
 	};
 
 	hl7015_chg: charger@6e {
@@ -173,9 +176,6 @@
 		monitored-battery = <&bat>;
 		irq-gpio = <&ap_gpio 185 GPIO_ACTIVE_LOW>;
 		use-typec-extcon;
-	/*	vddvbus:otg-vbus {
-			regulator-name = "vddvbus";
-		}; */
 	};
 };
 
