--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -10,6 +10,10 @@ ifeq ($(BUILD_SMT),YES)
 subdir-ccflags-y += -DSMT_VERSION
 endif
 
+ifeq ($(BUILD_D85),YES)
+subdir-ccflags-y += -DDUAL_85_VERSION
+endif
+
 obj-y				+= irqchip/
 obj-y				+= bus/
 
