EKMOTO-495:nfc:st54j driver bringup in kernel5.15 CRP:SPCSS01291262[2/8]
Change-Id: I4f801631f86c426092f68412cdff629a29afdfc2

--- a/arch/arm64/boot/dts/sprd/ump9622/ump9622.dtsi
+++ b/arch/arm64/boot/dts/sprd/ump9622/ump9622.dtsi
@@ -19,6 +19,12 @@
 			compatible = "sprd,ump9622-syscon";
 			reg = <0x2000>;
 		};
+		refout@2000 {
+			compatible = "sprd,ump9622-refout";
+			regsw = <0x2080>;
+			regdiv = <0x20B8>;
+			refnum = <4>;
+		};
 		pmic_tsensor: tsensor@20f8 {
 			compatible = "sprd,ump9622-tsensor";
 			#thermal-sensor-cells = <1>;
