--- a/drivers/soc/sprd/Kconfig
+++ b/drivers/soc/sprd/Kconfig
@@ -1,4 +1,10 @@
 # SPDX-License-Identifier: GPL-2.0-only
+config SPRD_PMIC_REFOUT
+        tristate "Spreadtrum PMIC refout driver"
+#        depends on MFD_UMP9622_PMIC || COMPILE_TEST
+	    help
+        Enable this configuration option to enable pmic refout driver.
+
 config SPRD_PIKE2_SLEEP
         bool "Spreadtrum light sleep driver for pike2 processors"
         depends on ARM_SPRD_CPUIDLE
