EKMOTO-915:lcm dj_nt36528 bringup in kernel<2>
Change-Id: I2300539c590312232fc63294b5d230faf90f53b7

--- a/arch/arm64/boot/dts/sprd/touchscreen/ums9620-spi1-gpio13-14-tp.dtsi
+++ b/arch/arm64/boot/dts/sprd/touchscreen/ums9620-spi1-gpio13-14-tp.dtsi
@@ -12,7 +12,7 @@
 
 	/* Novatek device tree node */
 	touchpanel@0 {
-		compatible = "omnivision,tcm-spi","tchip,ilitek";
+		compatible = "omnivision,tcm-spi","tchip,ilitek","novatek,NVT-ts-spi";
 		reg = <0>; //Same as CS ID
 		status = "ok";
 		spi-max-frequency = <8000000>;	//4800000,9600000,15000000,19200000
