[issue][dts][EKissue-10168]Creat new board for issue android U[3]
[rootcause]:Need
[solution]:create new board.
[sideeffect]:null
[others]:null

Change-Id: I1cf5f52785f9d4991feea9af7a00c8d831e91ae6

--- a/arch/arm64/boot/dts/sprd/Makefile
+++ b/arch/arm64/boot/dts/sprd/Makefile
@@ -38,6 +38,7 @@ dtb-$(CONFIG_ARCH_SPRD) += \
 	ums9230-4h10-overlay.dtbo \
 	ums9230-4h10-go-overlay.dtbo \
 	ums9230-6h10-overlay.dtbo \
+	cancun-overlay.dtbo \
 	ums9230-6h10-umb9230s-overlay.dtbo \
 	ums9230-6h10-customer-overlay.dtbo \
 	ums9230-6h10-go-overlay.dtbo \
@@ -50,6 +51,7 @@ ums9230-1h10_go-overlay.dtbo-base := ums9230-base.dtb
 ums9230-4h10-overlay.dtbo-base := ums9230-base.dtb
 ums9230-4h10-go-overlay.dtbo-base := ums9230-base.dtb
 ums9230-6h10-overlay.dtbo-base := ums9230-base.dtb
+cancun-overlay.dtbo-base := ums9230-base.dtb
 ums9230-6h10-umb9230s-overlay.dtbo-base := ums9230-base.dtb
 ums9230-6h10-customer-overlay.dtbo-base := ums9230-base.dtb
 ums9230-6h10-go-overlay.dtbo-base := ums9230-base.dtb
