--- a/arch/arm64/boot/dts/sprd/touchscreen/ums9230-spi3-gpio144-145-tp.dtsi
+++ b/arch/arm64/boot/dts/sprd/touchscreen/ums9230-spi3-gpio144-145-tp.dtsi
@@ -26,87 +26,23 @@
 
 	/* Novatek device tree node */
 	touchpanel@0 {
-		compatible = "chipone-tddi","tchip,ilitek","omnivision,tcm-spi";
+		compatible = "focaltech,fts","novatek,NVT-ts-spi","tchip,ilitek";
 		reg = <0>; //Same as CS ID
 		status = "ok";
 		spi-max-frequency = <8000000>;	//4800000,9600000,15000000,19200000
 
-		/*------------------focaltech_ft8756------------------*/
-		focaltech,max-touch-number = <5>;
-		focaltech,display-coords =  <0 0 1080 2400>;
+		/*------------------focaltech_ft8726------------------*/
+		focaltech,max-touch-number = <10>;
+		focaltech,display-coords =  <0 0 1079 2399>;
 		//spi-max-frequency = <6000000>;
 		focaltech,reset-gpio = <&ap_gpio 145 GPIO_ACTIVE_HIGH>;
 		focaltech,irq-gpio = <&ap_gpio 144 GPIO_ACTIVE_HIGH>;
-		/**********************icnl9916c***********************/
-
-                chipone,rst-gpio = <&ap_gpio 145 GPIO_ACTIVE_HIGH>;
-                chipone,irq-gpio = <&ap_gpio 144 GPIO_ACTIVE_HIGH>;
-                chipone,x-res = <720>;
-                chipone,y-res = <1612>;
-		/* Charger detect */
-                chipone,touch-charger-detect-enable;
-                chipone,touch-charger-detect-type = "notify"; /* notify, poll */
-                chipone,touch-charger-detect-psy-name = "charger";
-                chipone,touch-charger-detect-psp = "POWER_SUPPLY_PROP_ONLINE";
-                chipone,touch-charger-detect-psp-poll-interval = <1000>;
-                /* Earjack detect */
-                chipone,touch-earjack-detect-enable;
-                /* MTK:  /sys/bus/platform/drivers/Accdet_Driver/state,
-                   Sprd: /sys/kernel/headset/state
-                   QCOM: None, and disable it */
-                chipone,touch-earjack-state-filepath = "/sys/bus/platform/drivers/Accdet_Driver/state";
-                chipone,touch-earjack-poll-interval = <1000>;
-                /* For tp selftest */
-				/*xuwei comment: M173 chipone MP testdata confirmed as follow on sept.25*/
-                chipone,test-reset-pin;
-                chipone,test-int-pin;
-                chipone,test-rawdata;
-                chipone,test-rawdata-frames      = <1>;
-                chipone,rawdata-min              = <1202>;
-                chipone,rawdata-max              = <2903>;
-                chipone,test-noise;
-                chipone,test-noise-frames        = <50>;
-                chipone,noise-max                = <99>;
-                chipone,test-open;
-                chipone,open-min                 = <1700>;
-                chipone,test-short;
-                chipone,short-min                = <1700>;
-                chipone,test-compensate-cap;
-                chipone,compensate-cap-min       = <1>;
-                chipone,compensate-cap-max       = <126>;
-                /* gesture data test */
-                chipone,test-gesture-rawdata;
-                chipone,test-gesture-rawdata-frames = <1>;
-                chipone,gesture-rawdata-min = <100>;
-                chipone,gesture-rawdata-max = <10000>;
-                chipone,test-gesture-lp-rawdata;
-                chipone,test-gesture-lp-rawdata-frames = <1>;
-                chipone,gesture-lp-rawdata-min = <100>;
-                chipone,gesture-lp-rawdata-max = <10000>;
-                chipone,test-gesture-noise;
-                chipone,test-gesture-noise-frames = <50>;
-                chipone,gesture-noise-max = <1000>;
-                chipone,test-gesture-lp-noise;
-                chipone,test-gesture-lp-noise-frames = <50>;
-                chipone,gesture-lp-noise-max = <1000>;
-
-		/*------------------ili9883c_spi------------------*/
+		/*------------------ilitek7807s------------------*/
 		touch,reset-gpio = <&ap_gpio 145 GPIO_ACTIVE_HIGH>;
 		touch,irq-gpio = <&ap_gpio 144 GPIO_ACTIVE_HIGH>;
 		touch,eic-irq-gpio = <&eic_async 16 GPIO_ACTIVE_HIGH>;
-		/***************omnivision*****************/
-		omnivision,reset-gpio = <&ap_gpio 145 GPIO_ACTIVE_LOW>;
-		omnivision,irq-gpio = <&ap_gpio 144 GPIO_ACTIVE_LOW>;
-		omnivision,irq-on-state = <0>;
-		omnivision,reset-on-state = <0>;
-		omnivision,reset-active-ms = <20>;
-		omnivision,reset-delay-ms = <200>;
-		omnivision,power-delay-ms = <200>;
-		omnivision,spi-mode = <3>;
-		omnivision,byte-delay-us = <0>;
-		omnivision,block-delay-us = <0>;
-		omnivision,ubl-max-freq = <8000000>;
-		omnivision,ubl-byte-delay-us = <20>;
+		/*------------------ilitek7807s------------------*/
+
 		/*------------------novatek------------------*/
 		//novatek,pen-support;
 		//novatek,wgp-stylus;
@@ -120,9 +56,25 @@
 		novatek,swrst-n8-addr = <0x03F0FE>;
 		novatek,spi-rd-fast-addr = <0x03F310>;
 
+		pinctrl-names = "tp_extconf0","tp_extconf1";
+		pinctrl-0 = <&tp_extconf0>;
+		pinctrl-1 = <&tp_extconf1>;
 		/* MP */
 		//novatek,mp-support-dt;
 
 		#include "nvt-touchscreen-novatek-nt36xxx-spi.dtsi"
+	};
+};
+
+&pin_controller {
+
+	tp_extconf0: extint0 {
+		pins = "QOGIRL6_EXTINT0";
+		function = "func1";
+	};
+
+	tp_extconf1: gpio {
+		pins = "QOGIRL6_EXTINT0";
+		function = "func4";
 	};
 };
