--- a/arch/arm64/boot/dts/sprd/lion-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/lion-overlay.dts
@@ -7,6 +7,10 @@
 
 /dts-v1/;
 /plugin/;
+#include "lcd/lcd_nt36672c_tm_mipi_fhd.dtsi"
+#include "lcd/lcd_ft8726_csot_mipi_fhd.dtsi"
+#include "lcd/lcd_ili7807s_txd_mipi_fhd.dtsi"
+#include "lcd/lcd_nt36672c2_tm_mipi_fhd.dtsi"
 #include <dt-bindings/input/input.h>
 #include <dt-bindings/gpio/gpio.h>
 #include <dt-bindings/interrupt-controller/arm-gic.h>
@@ -378,6 +382,31 @@
                  sar-num = <0>;
                  status = "okay";
          };
+	aw99703_bl@36 {
+		compatible = "awinic,aw99703-bl";
+		reg = <0x36>;
+		/* brightness map level 1:256,2:1024,3:2048 */
+		aw99703,bl-map = <3>;
+		aw99703,using-lsb;
+		aw99703,ovp-level = <3>;
+		aw99703,ocp-level = <2>;
+		aw99703,switch-freq = <1>;
+		aw99703,hwen-gpio = <&ap_gpio 129 GPIO_ACTIVE_HIGH>;
+		aw99703,auto-freq-high = <0x80>;
+		aw99703,auto-freq-low = <0x10>;
+		aw99703,bl-fscal-led = <0x1A>; /*0x1A=25.6mA 0x19=24.8mA 0x13=20mA*/
+		aw99703,bl-channel = <3>;
+		aw99703,turn-on-ramp = <0x05>;
+		aw99703,turn-off-ramp = <0x05>;
+		aw99703,pwm-trans-dim = <0>;
+		aw99703,i2c-trans-dim = <0>;
+		aw99703,pwm-mode = <0>;
+		aw99703,map-type = <1>;
+		aw99703,work-mode = <1>;
+		aw99703,flash-timeout-time = <0x05>;
+		aw99703,flash-current = <0x08>;
+		aw99703,efuse-config = <0x1C 0x61 0x61 0x4C 0x2C 0xC0 0x08 0x00 0x01 0xC0 0x00 0x00 0x50>;
+	};
 };
 
 &i2c4 {
@@ -465,17 +494,7 @@
 
 	sprd,backlight = <&pwm_backlight>;
 };
-/*
-&lcd_g40396_truly_mipi_fhd {
-	sprd,sr-width = <720>;
-	sprd,sr-height = <1600>;
-};
 
-&lcd_nt36672e_truly_mipi_fhd_nodsc {
-	sprd,sr-width = <720>;
-	sprd,sr-height = <1600>;
-};
-*/
 &ddr_dfs {
 	  sprd-scene = "boost", "lcdon", "lcdoff", "camlow",
 			"camhigh", "camveryhigh", "faceid", "top", "boot-opt";
