[issue-U][Audio][EEKissueU-1]Bring Up[6/4]
[rootcause]：Bring Up
[solution]：NA
[sideeffects]：NA
[others]：NA.

Change-Id: I3df52ca14ec1b19fec8742c991a896bd477b1ede

--- a/arch/arm64/boot/dts/sprd/lion-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/lion-overlay.dts
@@ -413,10 +413,19 @@
 	status = "okay";
 	#address-cells = <1>;
 	#size-cells = <0>;
-	fs16xx@34 {
-		compatible = "foursemi,fs16xx";
-		reg = <0x34>;
-		fsm,rst-gpio = <&ap_gpio 129 GPIO_ACTIVE_HIGH>; // according to schematic diagram
+
+	/* AWINIC AW87XXX PA */
+	aw87xxx_pa@58 {
+		compatible = "awinic,aw87xxx_pa";
+		reg = <0x58>;
+		dev_index = < 0 >;
+		status = "okay";
+	};
+
+	aw87xxx_pa@59 {
+		compatible = "awinic,aw87xxx_pa";
+		reg = <0x59>;
+		dev_index = < 1 >;
 		status = "okay";
 	};
 
