--- a/arch/arm64/boot/dts/sprd/cancun-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/cancun-overlay.dts
@@ -1074,12 +1074,6 @@
         status = "okay";
     };
 
-	ucp1301_rcv: ucp1301@58 {
-		compatible = "unisoc,ucp1301-rcv";
-		reg = <0x58>;
-		reset-gpios = <&ap_gpio 172 GPIO_ACTIVE_HIGH>;
-		#sound-dai-cells = <1>;
-	};
 };
 
 
@@ -1130,7 +1124,7 @@
 	#address-cells = <1>;
 	#size-cells = <0>;
 
-	/* AWINIC AW87XXX PA */
+		/* AWINIC AW87XXX PA */
 	aw87xxx_pa@58 {
 		compatible = "awinic,aw87xxx_pa";
 		reg = <0x58>;
@@ -1145,13 +1139,6 @@
 		status = "okay";
 	};
 	
-	ucp1301_spk: ucp1301@58 {
-		compatible = "unisoc,ucp1301-spk";
-		reg = <0x58>;
-		reset-gpios = <&ap_gpio 167 GPIO_ACTIVE_HIGH>;
-		#sound-dai-cells = <1>;
-	};
-
 	stm_vl53l0: vl53l0@52 {
 		compatible = "st,stmvl53l0";
 		reg = <0x52>;
@@ -1169,10 +1156,7 @@
 
 &sprd_headset {
 	status = "okay";
-	extcon = <&pmic_typec>;
-	mic-gpios = <&ap_gpio 175 GPIO_ACTIVE_HIGH>;
 	lr-gpios = <&ap_gpio 174 GPIO_ACTIVE_HIGH>;
-	sprd,3pole-adc-threshold = <112>;
 };
 
 &pdm_dmic {
@@ -1185,66 +1169,15 @@
 
 &sound_vbc_v4_sprd_codec {
 	status = "okay";
-	sprd-audio-card,routing =
-		"HPMIC Pin", "HP Mic Jack",
-		"MIC Pin", "Mic Jack",
-		"MIC2 Pin", "Aux Mic Jack",
-		"HeadPhone Jack", "HP Pin",
-		"Ext Spk", "SPK Pin",
-		"UCP1301 SPK ON", "SPK Pin",
-		"Ext Spk", "UCP1301 SPK",
-		"PDM DMIC2 ON", "SPK Pin",
-		"Ext Spk", "PDM_DMIC2",
-		"DMIC Pin", "DMic Jack",
-		"DMIC1 Pin", "DMic1 Jack",
-		"Ext Ear", "EAR Pin",
-		"UCP1301 RCV ON", "EAR Pin",
-		"Ext Ear", "UCP1301 RCV";
+	sprd,spk-ext-pa-info = <0 1 1 0>;
+	extral-iic-pa = <1>;
 
-	/* 35: ucp1301 normal ap01 */
-	sprd-audio-card,dai-link@53 {
-		ignore-suspend = <1>;
-		link-name = "BE_NORMAL_AP01_UCPSPK";
-		stream-name = "BE_ST_NORMAL_AP01_UCPSPK";
-		no-pcm = <1>;
-		dpcm-playback = <1>;
-		be-id = <0>;
-		dai-format = "i2s";
-		plat {
-			sound-dai = <&sprd_route_pcm>;
-		};
-		cpu {
-			sound-dai = <&vbc_v4 31>;
-		};
-		codec {
-			sound-dai = <&ucp1301_spk 0>;
-		};
-	};
 
 	/*
 	 * node 54 and node 55 (index 36 and 37) are reserved for
 	 * "ucp1301-spk2" and "ucp1301-rcv"
 	 * nodes from 56 to 67 (index from 38 to 49) are used by HIFI
 	 */
-	/* 37: ucp1301 normal ap01 rcv */
-	sprd-audio-card,dai-link@55 {
-		ignore-suspend = <1>;
-		link-name = "BE_NORMAL_AP01_UCPRCV";
-		stream-name = "BE_ST_NORMAL_AP01_UCPRCV";
-		no-pcm = <1>;
-		dpcm-playback = <1>;
-		be-id = <0>;
-		dai-format = "i2s";
-		plat {
-			sound-dai = <&sprd_route_pcm>;
-		};
-		cpu {
-			sound-dai = <&vbc_v4 31>;
-		};
-		codec {
-			sound-dai = <&ucp1301_rcv 0>;
-		};
-	};
 
 	/* 63: pdm dmic */
 	sprd-audio-card,dai-link@81 {
