--- a/arch/arm64/boot/dts/sprd/ums9620-2h10_manila-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/ums9620-2h10_manila-overlay.dts
@@ -28,6 +28,7 @@
 #include "lcd/lcd_td4375_dijin_4lane_mipi_fhd.dtsi"
 #include "lcd/lcd_ili9883c_txd_120hz_mipi_hd.dtsi"
 #include "lcd/lcd_nt36528_dj_120hz_mipi_hd.dtsi"
+#include "lcd/lcd_td4160_tcl_120hz_mipi_hd.dtsi"
 #include "lcd/lcd_dummy_mipi.dtsi"
 #include "reserved-memory/ums9620-2h10-overlay.dtsi"
 #include "touchscreen/ums9620-spi1-gpio13-14-tp.dtsi"
