MOTO:kernel charge qc ko
Change-Id: I42616ba3bf48ed54c1d6e59a4edb70a1b093815e

--- a/drivers/power/supply/Makefile
+++ b/drivers/power/supply/Makefile
@@ -114,10 +114,10 @@ obj-$(CONFIG_BATTERY_ACER_A500)	+= acer_a500_battery.o
 obj-$(CONFIG_BATTERY_SURFACE)	+= surface_battery.o
 obj-$(CONFIG_CHARGER_SURFACE)	+= surface_charger.o
 obj-$(CONFIG_CHARGER_BQ2560X)	+= bq2560x-charger.o
-obj-y	+= bq2560x-pe-charger.o
-obj-y	+= bq2560x-qc-charger.o
-obj-y	+= hl7015-qc-charger.o
-obj-y	+= upm6920-qc-charger.o
+obj-$(CONFIG_CHARGER_BQ2560X)	+= bq2560x-pe-charger.o
+obj-$(CONFIG_CHARGER_BQ2560X)	+= bq2560x-qc-charger.o
+obj-$(CONFIG_CHARGER_HL7015)	+= hl7015-qc-charger.o
+obj-$(CONFIG_CHARGER_UPM6920)	+= upm6920-qc-charger.o
 obj-$(CONFIG_CHARGER_UPM6920)	+= upm6920-charger.o
 obj-$(CONFIG_CHARGER_HL7015)	+= hl7015-charger.o
 obj-$(CONFIG_CHARGER_BQ2597X)	+= bq2597x-charger.o
