[issue][NFC][EKissue-1009]Nfc vnd bring up for kernel 1
[rootcause]:nfc bring up
[solution]:nfc bring up
[sideeffect]:no
[others]:no

Change-Id: I79eb84b735ccc94d09265b668548baf43e862bd6

--- a/arch/arm64/boot/dts/sprd/lion-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/lion-overlay.dts
@@ -343,7 +343,7 @@
 };
 
 &i2c2 {
-
+	/*
 	status = "okay";
 	#address-cells = <1>;
 	#size-cells = <0>;
@@ -357,14 +357,36 @@
 		sec-nfc,irq-gpio = <&ap_gpio 126 0>;
 		sec-nfc,clk-req = <&ap_gpio 60 0>;
 	};
+	*/
 	
-
+	status = "okay";
+    clock-frequency = <400000>;
+    #address-cells = <1>;
+    #size-cells = <0>;
+    st21nfc: st21nfc@08 {
+        compatible = "st,st21nfc";
+        reg = <0x08>;
+        interrupt-parent = <&ap_gpio>;
+        interrupts = <126  0>;
+        reset-gpios = <&ap_gpio 63 0x00>;
+        irq-gpios = <&ap_gpio 126 0x00>;
+        // pidle-gpios = <&ap_gpio 48 0x00>;
+        clkreq-gpios = <&ap_gpio 60 0x00>;
+        //clocks = <&clock_rpmh RPMH_RF_CLK3>;
+        clock-names = "nfc_ref_clk","source","enable";
+        //st,clk_pinctrl;
+        //i2c-retry = <0>;
+        status = "okay";
+    };
+	
+	/*
 	ucp1301_rcv: ucp1301@58 {
 		compatible = "unisoc,ucp1301-rcv";
 		reg = <0x58>;
 		reset-gpios = <&ap_gpio 172 GPIO_ACTIVE_HIGH>;
 		#sound-dai-cells = <1>;
 	};
+	*/
 };
 
 &i2c3 {
