--- a/drivers/nfc/Makefile
+++ b/drivers/nfc/Makefile
@@ -18,5 +18,5 @@ obj-$(CONFIG_NFC_NXP_NCI)	+= nxp-nci/
 obj-$(CONFIG_NFC_S3FWRN5)	+= s3fwrn5/
 obj-$(CONFIG_NFC_ST95HF)	+= st95hf/
 obj-$(CONFIG_NFC_VIRTUAL_NCI)	+= virtual_ncidev.o
-obj-$(CONFIG_SEC_NFC) += samsung/
-obj-m 				+= samsung/
+obj-$(CONFIG_ST21NFC) += st21nfc.o
+obj-m 				+= st21nfc/
