--- a/arch/arm64/boot/dts/sprd/cancun-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/cancun-overlay.dts
@@ -34,9 +34,9 @@
 
 / {
 
-	model = "Spreadtrum CANCUN Board";
+	model = "Spreadtrum UMS9230 6H10 Board";
 
-	compatible = "sprd,cancun";
+	compatible = "sprd,ums9230-6h10";
 
 	sprd,sc-id = "ums9230 6h10 1000";
 
